ios/openim_sdk_ffi.xcframework/ios-arm64/openim_sdk_ffi.framework/openim_sdk_ffi.h

extern void MarkMessagesAsReadByMsgID(char* operationID, char* conversationID, char* clientMsgIDs);
extern char* CreateFileMessageByURL(char* operationID, char* fileBaseInfo);
extern char* CreateFileMessageFromFullPath(char* operationID, char* fileFullPath, char* fileName);
extern char* CreateSoundMessageFromFullPath(char* operationID, char* soundFullPath, int64_t duration);
extern char* CreateVideoMessageFromFullPath(char* operationID, char* videoFullPath, char* videoType, int64_t duration, char* snapshotFullPath);
extern void UploadFile(char* operationID, char* req, char* uuid);
extern void AcceptFriendApplication(char* operationID, char* userIDHandleMsg);
extern void AddBlack(char* operationID, char* blackUserID, char* ex);
extern void AddFriend(char* operationID, char* userIDReqMsg);
extern void CheckFriend(char* operationID, char* userIDList);
extern void DeleteFriend(char* operationID, char* friendUserID);
extern void GetBlackList(char* operationID);
extern void GetFriendApplicationListAsApplicant(char* operationID, char* req);
extern void GetFriendApplicationListAsRecipient(char* operationID, char* req);
extern void GetFriendList(char* operationID, _Bool filterBlack);
extern void GetFriendListPage(char* operationID, int32_t offset, int32_t count, _Bool filterBlack);
extern void GetSpecifiedFriendsInfo(char* operationID, char* userIDList, _Bool filterBlack);
extern void RefuseFriendApplication(char* operationID, char* userIDHandleMsg);
extern void RemoveBlack(char* operationID, char* removeUserID);
extern void SearchFriends(char* operationID, char* searchParam);
extern void UpdateFriends(char* operationID, char* req);
extern void CreateGroup(char* operationID, char* groupReqInfo);