lib/openim_ffi_bindings_generated.dart


  late final _MarkMessagesAsReadByMsgIDPtr = _lookup<
    ffi.NativeFunction<
      ffi.Void Function(
        ffi.Pointer<ffi.Char>,
        ffi.Pointer<ffi.Char>,
        ffi.Pointer<ffi.Char>,
      )
    >
  >('MarkMessagesAsReadByMsgID');
  late final _MarkMessagesAsReadByMsgID =
      _MarkMessagesAsReadByMsgIDPtr.asFunction<
        void Function(
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
        )
      >();

  ffi.Pointer<ffi.Char> CreateFileMessageByURL(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> fileBaseInfo,
  ) {
    return _CreateFileMessageByURL(operationID, fileBaseInfo);
  }

  late final _CreateFileMessageByURLPtr = _lookup<
    ffi.NativeFunction<
      ffi.Pointer<ffi.Char> Function(
        ffi.Pointer<ffi.Char>,
        ffi.Pointer<ffi.Char>,
      )
    >
  >('CreateFileMessageByURL');
  late final _CreateFileMessageByURL =
      _CreateFileMessageByURLPtr.asFunction<
        ffi.Pointer<ffi.Char> Function(
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
        )
      >();

  ffi.Pointer<ffi.Char> CreateFileMessageFromFullPath(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> fileFullPath,
    ffi.Pointer<ffi.Char> fileName,
  ) {
    return _CreateFileMessageFromFullPath(operationID, fileFullPath, fileName);
  }

  late final _CreateFileMessageFromFullPathPtr = _lookup<
    ffi.NativeFunction<
      ffi.Pointer<ffi.Char> Function(
        ffi.Pointer<ffi.Char>,
        ffi.Pointer<ffi.Char>,
        ffi.Pointer<ffi.Char>,
      )
    >
  >('CreateFileMessageFromFullPath');
  late final _CreateFileMessageFromFullPath =
      _CreateFileMessageFromFullPathPtr.asFunction<
        ffi.Pointer<ffi.Char> Function(
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
        )
      >();

  ffi.Pointer<ffi.Char> CreateSoundMessageFromFullPath(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> soundFullPath,
    int duration,
  ) {
    return _CreateSoundMessageFromFullPath(
      operationID,
      soundFullPath,
      duration,
    );
  }

  late final _CreateSoundMessageFromFullPathPtr = _lookup<
    ffi.NativeFunction<
      ffi.Pointer<ffi.Char> Function(
        ffi.Pointer<ffi.Char>,
        ffi.Pointer<ffi.Char>,
        ffi.Int64,
      )
    >
  >('CreateSoundMessageFromFullPath');
  late final _CreateSoundMessageFromFullPath =
      _CreateSoundMessageFromFullPathPtr.asFunction<
        ffi.Pointer<ffi.Char> Function(
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          int,
        )
      >();

  ffi.Pointer<ffi.Char> CreateVideoMessageFromFullPath(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> videoFullPath,
    ffi.Pointer<ffi.Char> videoType,
    int duration,
    ffi.Pointer<ffi.Char> snapshotFullPath,
  ) {
    return _CreateVideoMessageFromFullPath(
      operationID,
      videoFullPath,
      videoType,
      duration,
      snapshotFullPath,
    );
  }

  late final _CreateVideoMessageFromFullPathPtr = _lookup<
    ffi.NativeFunction<
      ffi.Pointer<ffi.Char> Function(
        ffi.Pointer<ffi.Char>,
        ffi.Pointer<ffi.Char>,
        ffi.Pointer<ffi.Char>,
        ffi.Int64,
        ffi.Pointer<ffi.Char>,
      )
    >
  >('CreateVideoMessageFromFullPath');
  late final _CreateVideoMessageFromFullPath =
      _CreateVideoMessageFromFullPathPtr.asFunction<
        ffi.Pointer<ffi.Char> Function(
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          int,
          ffi.Pointer<ffi.Char>,
        )
      >();

  void UploadFile(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> req,
    ffi.Pointer<ffi.Char> uuid,
  ) {
    return _UploadFile(operationID, req, uuid);
  }

  late final _UploadFilePtr = _lookup<
    ffi.NativeFunction<
      ffi.Void Function(
        ffi.Pointer<ffi.Char>,
        ffi.Pointer<ffi.Char>,
        ffi.Pointer<ffi.Char>,
      )
    >
  >('UploadFile');
  late final _UploadFile =
      _UploadFilePtr.asFunction<
        void Function(
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
        )
      >();

  void AcceptFriendApplication(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> userIDHandleMsg,
  ) {
    return _AcceptFriendApplication(operationID, userIDHandleMsg);
  }

  late final _AcceptFriendApplicationPtr = _lookup<
    ffi.NativeFunction<
      ffi.Void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)
    >
  >('AcceptFriendApplication');
  late final _AcceptFriendApplication =
      _AcceptFriendApplicationPtr.asFunction<
        void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)
      >();

  void AddBlack(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> blackUserID,
    ffi.Pointer<ffi.Char> ex,
  ) {
    return _AddBlack(operationID, blackUserID, ex);
  }

  late final _AddBlackPtr = _lookup<
    ffi.NativeFunction<
      ffi.Void Function(
        ffi.Pointer<ffi.Char>,
        ffi.Pointer<ffi.Char>,
        ffi.Pointer<ffi.Char>,
      )
    >
  >('AddBlack');
  late final _AddBlack =
      _AddBlackPtr.asFunction<
        void Function(
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
        )
      >();

  void AddFriend(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> userIDReqMsg,
  ) {
    return _AddFriend(operationID, userIDReqMsg);
  }

  late final _AddFriendPtr = _lookup<
    ffi.NativeFunction<
      ffi.Void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)
    >
  >('AddFriend');
  late final _AddFriend =
      _AddFriendPtr.asFunction<
        void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)
      >();

  void CheckFriend(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> userIDList,
  ) {
    return _CheckFriend(operationID, userIDList);
  }

  late final _CheckFriendPtr = _lookup<
    ffi.NativeFunction<
      ffi.Void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)
    >
  >('CheckFriend');
  late final _CheckFriend =
      _CheckFriendPtr.asFunction<
        void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)
      >();

  void DeleteFriend(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> friendUserID,
  ) {
    return _DeleteFriend(operationID, friendUserID);
  }

  late final _DeleteFriendPtr = _lookup<
    ffi.NativeFunction<
      ffi.Void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)
    >
  >('DeleteFriend');
  late final _DeleteFriend =
      _DeleteFriendPtr.asFunction<
        void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)
      >();

  void GetBlackList(ffi.Pointer<ffi.Char> operationID) {
    return _GetBlackList(operationID);
  }

  late final _GetBlackListPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Char>)>>(
        'GetBlackList',
      );
  late final _GetBlackList =
      _GetBlackListPtr.asFunction<void Function(ffi.Pointer<ffi.Char>)>();

  void GetFriendApplicationListAsApplicant(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> req,
  ) {
    return _GetFriendApplicationListAsApplicant(operationID, req);
  }

  late final _GetFriendApplicationListAsApplicantPtr = _lookup<
    ffi.NativeFunction<
      ffi.Void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)
    >
  >('GetFriendApplicationListAsApplicant');
  late final _GetFriendApplicationListAsApplicant =
      _GetFriendApplicationListAsApplicantPtr.asFunction<
        void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)
      >();

  void GetFriendApplicationListAsRecipient(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> req,
  ) {
    return _GetFriendApplicationListAsRecipient(operationID, req);
  }

  late final _GetFriendApplicationListAsRecipientPtr = _lookup<
    ffi.NativeFunction<
      ffi.Void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)
    >
  >('GetFriendApplicationListAsRecipient');
  late final _GetFriendApplicationListAsRecipient =
      _GetFriendApplicationListAsRecipientPtr.asFunction<
        void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)
      >();

  void GetFriendList(ffi.Pointer<ffi.Char> operationID, bool filterBlack) {
    return _GetFriendList(operationID, filterBlack);
  }

  late final _GetFriendListPtr = _lookup<
    ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Char>, ffi.Bool)>
  >('GetFriendList');
  late final _GetFriendList =
      _GetFriendListPtr.asFunction<
        void Function(ffi.Pointer<ffi.Char>, bool)
      >();

  void GetFriendListPage(
    ffi.Pointer<ffi.Char> operationID,
    int offset,
    int count,
    bool filterBlack,
  ) {
    return _GetFriendListPage(operationID, offset, count, filterBlack);
  }

  late final _GetFriendListPagePtr = _lookup<
    ffi.NativeFunction<
      ffi.Void Function(ffi.Pointer<ffi.Char>, ffi.Int32, ffi.Int32, ffi.Bool)
    >
  >('GetFriendListPage');
  late final _GetFriendListPage =
      _GetFriendListPagePtr.asFunction<
        void Function(ffi.Pointer<ffi.Char>, int, int, bool)
      >();

  void GetSpecifiedFriendsInfo(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> userIDList,
    bool filterBlack,
  ) {
    return _GetSpecifiedFriendsInfo(operationID, userIDList, filterBlack);
  }

  late final _GetSpecifiedFriendsInfoPtr = _lookup<
    ffi.NativeFunction<
      ffi.Void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, ffi.Bool)
    >
  >('GetSpecifiedFriendsInfo');
  late final _GetSpecifiedFriendsInfo =
      _GetSpecifiedFriendsInfoPtr.asFunction<
        void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, bool)
      >();

  void RefuseFriendApplication(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> userIDHandleMsg,
  ) {
    return _RefuseFriendApplication(operationID, userIDHandleMsg);
  }

  late final _RefuseFriendApplicationPtr = _lookup<
    ffi.NativeFunction<
      ffi.Void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)
    >
  >('RefuseFriendApplication');
  late final _RefuseFriendApplication =
      _RefuseFriendApplicationPtr.asFunction<
        void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)
      >();

  void RemoveBlack(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> removeUserID,
  ) {
    return _RemoveBlack(operationID, removeUserID);
  }

  late final _RemoveBlackPtr = _lookup<
    ffi.NativeFunction<
      ffi.Void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)
    >
  >('RemoveBlack');
  late final _RemoveBlack =
      _RemoveBlackPtr.asFunction<
        void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)
      >();

  void SearchFriends(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> searchParam,
  ) {
    return _SearchFriends(operationID, searchParam);
  }

  late final _SearchFriendsPtr = _lookup<
    ffi.NativeFunction<
      ffi.Void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)
    >
  >('SearchFriends');
  late final _SearchFriends =
      _SearchFriendsPtr.asFunction<
        void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)
      >();

  void UpdateFriends(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> req,
  ) {
    return _UpdateFriends(operationID, req);
  }

  late final _UpdateFriendsPtr = _lookup<
    ffi.NativeFunction<
      ffi.Void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)
    >
  >('UpdateFriends');
  late final _UpdateFriends =
      _UpdateFriendsPtr.asFunction<
        void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)
      >();

  void CreateGroup(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> groupReqInfo,
  ) {
    return _CreateGroup(operationID, groupReqInfo);
  }
